@startuml

title Description du domaine fonctionnel complet

/' = = = = = = = STYLE = = = = = = = '/
' skinparam monochrome true
skinparam linetype ortho

!define table(x) class x << (T,#FFAAAA) >>
!define primary_key(x) <b>PK: x</b>
!define foreign_key(x,reference) <b>FK: </b>x

/' = = = = = = = CLASSE = = = = = = = '/

package PkgOrder {
    class line_order
    class order
    class payment_history
    class payment_solution

    line_order "*" -left- "1" order : "    "
    order "1" -up- "*" payment_history
    payment_solution "1" -down- "*" payment_history
}

package PkgIngredient {
    class composition
    class ingredient
    class pizza
    class restaurant
    class stock

    ingredient "1..*" - "1..*" restaurant
    (ingredient, restaurant) .. stock

    pizza "1..*" - "1..*" ingredient
    (pizza, ingredient) .. composition
}

package PkgAccount {
    class address
    class client
    class employee
    class phone

    client "1..*" - "1..*" phone
    client "1..*" -left- "1..*" address
    address "1" -down- "*" employee
    phone "1..*" -right- "1..*" employee
}

/' = = = = = = = ATTRIBUTE = = = = = = = '/

/' - - PkgAccount - - '/

class address {
    id
    line1
    line2
    zip
    city
}

class client {
    id
    1st_name
    name
    phone_id
    delivery_address_id
    billing_address_id
}

class employee {
    id
    1st_name
    name
    phone_id
    home_address_id
    restaurant_id
}

class phone {
    id
    number
}


/' - - PkgIngredient - - '/

class composition {
    pizza_id
    ingredient_id
    quantity
}

class ingredient {
    id
    label
    pizza
}

class pizza {
    id
    name
    price_ex_tax
    tax_rate
}

class restaurant {
    id
    name
}

class stock {
    ingredient_id
    restaurant_id
    quantity
    unit
}

/' - - PkgOrder - - '/

class line_order {
    id
    order_id
    pizza_id
    date
    quantity
    size
    tax_rate100
    unit_price_ex_tax
}

class order {
    id
    employee_id
    client_id
    invoice_num
    date
    status
}

class payment_history {
    payment_solution_id
    order_id
    amount
    date
}

class payment_solution {
    id
    label
}

/' = = = = = = = RELATION INTER PKG = = = = = = = '/
employee "1" - "*" order
order "*" - "1" client
address "1" -- "1" restaurant
employee "*" -- "1" restaurant

@enduml
